@@ -25,6 +25,7 @@ Other features
  * ``wagtail_serve`` URL route can now be omitted for headless sites (Storm Heg)
  * Allow free tagging to be disabled on custom tag models (Matt Westcott)
  * Allow disabling page preview by setting ``preview_modes`` to an empty list (Casper Timmers)
+ * Add Vidyard to oEmbed provider list (Steve Lyall)
 
 
 Bug fixes
